# estate-nft

./: .env  .gitignore  README.md  dfx.json  sns_canister_ids.json
.github/workflows/: deploy.yml  sns_proposal.yml  test.yml
estate_dao_nft/: Cargo.toml  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
estate_dao_nft/src/estate_dao_nft_backend/: Cargo.toml  estate_dao_nft_backend.did
estate_dao_nft/src/estate_dao_nft_backend/src/: lib.rs  state.rs
estate_dao_nft/src/estate_dao_nft_frontend/src/: index.html  index.js
icp_ledger/: dfx.json
notes/: architecture.md
provision_canister/: Cargo.toml  README.md  argument1  argument2  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
provision_canister/src/provision_canister_backend/: Cargo.toml  provision_canister_backend.did
provision_canister/src/provision_canister_backend/src/: guard.rs  lib.rs  state.rs
provision_canister/src/provision_canister_frontend/src/: index.html  index.js
scripts/: canisters_deploy_local.sh  generate_declarations.sh  icp_ledger_canister_install.sh  install_canisters_locally.sh  upload_wasm.sh  upload_wasm_ic.sh  upload_wasm_locally.sh
src/estate_dao_nft_backend/: Cargo.toml  estate_dao_nft_backend.did
src/estate_dao_nft_backend/src/: lib.rs  state.rs
