[package]
name = "provision_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.12.1"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.9.0"